--- a/good/css/main.css
+++ b/good/css/main.css
@@ -23,7 +23,7 @@
 
 @font-face {
   font-family: 'Coolvetica';
-  src: url('../fonts/Coolvetica.ttf') format('opentype');
+  src: url('../fonts/Coolvetica.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
